--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,10 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.0"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "ar.edu.unrn.lia.capacitacionhorizonte1"
         minSdkVersion 16
@@ -21,11 +23,23 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile "com.android.support:recyclerview-v7:24.0.0"
+    compile "com.android.support:appcompat-v7:24.0.0"
+    compile "com.android.support:cardview-v7:24.0.0"
+    compile "com.android.support:support-v4:24.0.0"
+    compile "com.android.support:design:24.0.0"
+
+    compile "com.github.bumptech.glide:glide:3.7.0"
+    compile 'com.jakewharton:butterknife:8.1.0'
+    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+
+
+    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.0.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
-    compile 'com.android.support:design:24.0.0'
+    compile 'com.android.support:support-v4:24.0.0'
     testCompile 'junit:junit:4.12'
 }
