--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     apt 'com.jakewharton:butterknife-compiler:8.1.0'
 
 
+    compile 'com.android.volley:volley:1.0.0'
+
+
+
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha3'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
