--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 
-def dbflow_version = "3.0.1"
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 28
     useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "ar.edu.unrn.lia.capacitacionhorizonte1"
-        minSdkVersion 16
-        targetSdkVersion 24
+        minSdkVersion 20
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -24,40 +21,41 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile "com.android.support:recyclerview-v7:24.2.0"
-    compile "com.android.support:appcompat-v7:24.2.0"
-    compile "com.android.support:cardview-v7:24.2.0"
-    compile "com.android.support:support-v4:24.2.0"
-    compile "com.android.support:design:24.2.0"
+    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha1'
+    implementation 'com.android.support:design:28.0.+'
+    implementation "com.android.support:recyclerview-v7:28.0.0-rc01"
+    implementation "com.android.support:cardview-v7:28.0.0-rc01"
+    implementation "com.android.support:support-v4:28.0.0-rc01"
 
-    compile "com.github.bumptech.glide:glide:3.7.0"
-    compile 'com.jakewharton:butterknife:8.1.0'
-    apt 'com.jakewharton:butterknife-compiler:8.1.0'
+    implementation "com.github.bumptech.glide:glide:3.8.0"
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
 
     //Rest APIs
-    compile 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.volley:volley:1.0.0'
 
     //Retrofit
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    provided 'org.glassfish:javax.annotation:10.0-b28'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 
 
-    //Sqlite ORM
-    apt "com.github.Raizlabs.DBFlow:dbflow-processor:${dbflow_version}"
-    // use kapt for kotlin apt
-    compile "com.github.Raizlabs.DBFlow:dbflow-core:${dbflow_version}"
-    compile "com.github.Raizlabs.DBFlow:dbflow:${dbflow_version}"
+    def room_version = "1.1.1"
+
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version" // use kapt for Kotlin
 
 
 
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:support-v4:24.2.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    androidTestImplementation 'junit:junit:4.12'
 }
