--- a/build.gradle
+++ b/build.gradle
@@ -3,23 +3,28 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.1.4'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
-
-        maven { url "https://www.jitpack.io" }
-
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
