--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,12 +23,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0-rc01'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.0-alpha1'
-    implementation 'com.android.support:design:28.0.+'
-    implementation "com.android.support:recyclerview-v7:28.0.0-rc01"
-    implementation "com.android.support:cardview-v7:28.0.0-rc01"
-    implementation "com.android.support:support-v4:28.0.0-rc01"
+    def android_support_version = "28.0.0-rc01"
+    def room_version = "1.1.1"
+
+    implementation "com.android.support:appcompat-v7:$android_support_version"
+    implementation "com.android.support.constraint:constraint-layout:2.0.0-alpha1"
+    implementation "com.android.support:design:$android_support_version"
+    implementation "com.android.support:recyclerview-v7:$android_support_version"
+    implementation "com.android.support:cardview-v7:$android_support_version"
+    implementation "com.android.support:support-v4:$android_support_version"
 
     implementation "com.github.bumptech.glide:glide:3.8.0"
     implementation 'com.jakewharton:butterknife:8.8.1'
@@ -45,7 +48,7 @@ dependencies {
     compileOnly 'org.glassfish:javax.annotation:10.0-b28'
 
 
-    def room_version = "1.1.1"
+
 
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version" // use kapt for Kotlin
@@ -56,6 +59,6 @@ dependencies {
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    implementation 'com.android.support:support-v4:28.0.0-rc01'
+    implementation "com.android.support:support-v4:$android_support_version"
     androidTestImplementation 'junit:junit:4.12'
 }
